# litex-jupyter-kernel

./: .gitignore  README.md  build_and_upload.sh  pyproject.toml
litex_kernel/: install.py  kernel.py
