[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "litex_kernel"
authors = [
    {name = "Hill Hong", email = "scanfandprintf@icloud.com"},
]
readme = "README.rst"
dependencies = ["pexpect (>=4.0)", "ipykernel"]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Litex",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/litexlang/litex_kernel"